*SVN*

* Fixed routing to allow for testing of *path components #1650 [Nicholas Seckar]

* Added :handle as an option to sortable_element to restrict the drag handle to a given class #1642 [thejohnny]

* Added a bunch of script.aculo.us features: Effect.ScrollTo, to smoothly scroll the page to an element, better Firefox flickering handling on SlideUp/SlideDown, Removed a possible memory leak in IE with draggables, Added support for cancelling dragging my hitting ESC #1644 [Thomas Fuchs]

* Fixed that named routes didn't use the default values for action and possible other parameters #1534 [Nicholas Seckar]

* Fixed JavascriptHelper#visual_effect to use camelize such that :blind_up will work #1639 [pelletierm@eastmedia.net]

* Fixed that a SessionRestoreError was thrown if a model object was placed in the session that wasn't available to all controllers. This means that it's no longer necessary to use the 'model :post' work-around in ApplicationController to have a Post model in your session.


*1.9.0* (6 July, 2005)

* Added logging of the request URI in the benchmark statement (makes it easy to grep for slow actions)

* Added javascript_include_tag :defaults shortcut that'll include all the default javascripts included with Action Pack (prototype, effects, controls, dragdrop)

* Cache several controller variables that are expensive to calculate #1229 [skaes@web.de]

* The session class backing CGI::Session::ActiveRecordStore may be replaced with any class that duck-types with a subset of Active Record.  See docs for details #1238 [skaes@web.de]

* Fixed that hashes was not working properly when passed by GET to lighttpd #849 [Nicholas Seckar]

* Fixed assert_template nil will be true when no template was rendered #1565 [maceywj@telus.net]

* Added :prompt option to FormOptions#select (and the users of it, like FormOptions#select_country etc) to create "Please select" style descriptors #1181 [Michael Schuerig]
